# ViKey-Telex

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  gradle.properties  settings.gradle.kts  vikey-vi-translation.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  crash_report.yml
.github/workflows/: android.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: crash_dialog.xml
app/src/main/res/values/: colors.xml  (+3 more)
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-bg/: strings.xml
app/src/main/res/values-ca/: strings.xml
app/src/main/res/values-ckb/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-el/: strings.xml
app/src/main/res/values-eo/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/values-fi/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hr/: strings.xml
app/src/main/res/values-hu/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-it/: strings.xml
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/obtainium/: stable.json
gradle/: libs.versions.toml
lib/native/: build.gradle.kts
lib/native/src/main/cpp/: CMakeLists.txt  qwen_jni.cpp  qwen_jni.h
tools/: vocab_removed.txt
training/: convert_no_flex.py  optimized_notebook.ipynb  optimized_notebook.py  v2_train.py
(+205 files in other folders)
